[gd_scene load_steps=18 format=3 uid="uid://cashahcwmo0ch"]

[ext_resource type="Theme" uid="uid://8783p7rjqna0" path="res://assets/buttons/themes/app_theme.tres" id="1_6a0o4"]
[ext_resource type="PackedScene" uid="uid://crxlp4j1ka3r2" path="res://scenes/camera.tscn" id="1_cdmem"]
[ext_resource type="Script" path="res://scripts/enhanced_camera.gd" id="2_7xg7t"]
[ext_resource type="Texture2D" uid="uid://c1n3fuddegeup" path="res://assets/buttons/icons/drag.png" id="3_bk4mn"]
[ext_resource type="Texture2D" uid="uid://bbn762sxoj0jy" path="res://assets/buttons/icons/arrow_forward.png" id="3_u8nmf"]
[ext_resource type="Script" path="res://scripts/menu/drag_panel.gd" id="3_xqiad"]
[ext_resource type="Texture2D" uid="uid://bpo3u1pr67k1u" path="res://assets/buttons/icons/pause.png" id="4_7o05n"]
[ext_resource type="Texture2D" uid="uid://mt18q1agusq1" path="res://assets/buttons/icons/thick_close.png" id="4_ah08m"]
[ext_resource type="StyleBox" uid="uid://deo708pmaclnx" path="res://assets/buttons/resources/style_box_cancel.tres" id="4_hpnts"]
[ext_resource type="Texture2D" uid="uid://dggvaf5bgco0s" path="res://assets/buttons/icons/continue.png" id="5_rhlkx"]
[ext_resource type="PackedScene" uid="uid://jhfkcwhkj4oj" path="res://scenes/menu/components/help_button.tscn" id="11_3rvfg"]
[ext_resource type="Texture2D" uid="uid://bfktgwm18qdmg" path="res://assets/buttons/icons/Configuration.png" id="12_kwtxd"]
[ext_resource type="PackedScene" uid="uid://cmxvd2fe2h8ni" path="res://scenes/menu/components/control_camer_conf_btn.tscn" id="13_pvcjh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o83fs"]
bg_color = Color(0.964706, 0.933333, 0.870588, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.145098, 0.0980392, 0.34902, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0x85"]
bg_color = Color(0.964706, 0.933333, 0.870588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4oky7"]
bg_color = Color(0.964706, 0.470588, 0.360784, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.145098, 0.0980392, 0.34902, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3sskv"]
bg_color = Color(0.611765, 0.192157, 0.0941176, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.145098, 0.0980392, 0.34902, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="EnhancedCamera" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_6a0o4")
script = ExtResource("2_7xg7t")

[node name="DragPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 146.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o83fs")
script = ExtResource("3_xqiad")

[node name="TextureRect" type="TextureRect" parent="DragPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bk4mn")

[node name="HelpButton" parent="DragPanel" instance=ExtResource("11_3rvfg")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 555.0
offset_top = 44.0
offset_right = 605.0
offset_bottom = 94.0
grow_horizontal = 1
grow_vertical = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 170.0
offset_right = 640.0
offset_bottom = 831.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n0x85")

[node name="Camera" parent="Panel" instance=ExtResource("1_cdmem")]
layout_mode = 0
offset_top = 182.0
offset_right = 640.0
offset_bottom = 662.0

[node name="GoBack" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 9.0
offset_right = 207.0
offset_bottom = 175.0
focus_neighbor_left = NodePath("../Close")
focus_neighbor_top = NodePath("../../DragPanel/HelpButton")
focus_neighbor_right = NodePath("../Pause")
focus_neighbor_bottom = NodePath("../control_camer_conf_btn")
focus_next = NodePath("../Pause")
focus_previous = NodePath("../../DragPanel/HelpButton")

[node name="TextureRect" type="TextureRect" parent="Panel/GoBack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_u8nmf")
flip_h = true

[node name="Pause" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 224.0
offset_top = 9.0
offset_right = 414.0
offset_bottom = 175.0
focus_neighbor_left = NodePath("../GoBack")
focus_neighbor_top = NodePath("../../DragPanel/HelpButton")
focus_neighbor_right = NodePath("../Close")
focus_neighbor_bottom = NodePath("../control_camer_conf_btn")
focus_next = NodePath("../Close")
focus_previous = NodePath("../GoBack")

[node name="TextureRect" type="TextureRect" parent="Panel/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -37.0
offset_right = 30.5
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_7o05n")

[node name="TextureRect2" type="TextureRect" parent="Panel/Pause"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -36.5
offset_right = 38.5
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_rhlkx")

[node name="Close" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 430.0
offset_top = 10.0
offset_right = 629.0
offset_bottom = 176.0
focus_neighbor_left = NodePath("../Pause")
focus_neighbor_top = NodePath("../../DragPanel/HelpButton")
focus_neighbor_right = NodePath("../control_camer_conf_btn")
focus_neighbor_bottom = NodePath("../control_camer_conf_btn")
focus_next = NodePath("../control_camer_conf_btn")
focus_previous = NodePath("../Pause")
theme_override_styles/normal = ExtResource("4_hpnts")
theme_override_styles/hover = SubResource("StyleBoxFlat_4oky7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3sskv")

[node name="TextureRect" type="TextureRect" parent="Panel/Close"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -36.5
offset_right = 36.5
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ah08m")

[node name="TextureButton" type="TextureButton" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 560.0
offset_top = 592.0
offset_right = 638.0
offset_bottom = 656.0
texture_normal = ExtResource("12_kwtxd")
stretch_mode = 3

[node name="control_camer_conf_btn" parent="Panel" instance=ExtResource("13_pvcjh")]
layout_mode = 0
offset_left = 529.0
offset_top = 551.0
offset_right = 636.0
offset_bottom = 655.0
focus_neighbor_left = NodePath("../Close")
focus_neighbor_top = NodePath("../Close")
focus_neighbor_right = NodePath("../../DragPanel/HelpButton")
focus_neighbor_bottom = NodePath("../../DragPanel/HelpButton")
focus_next = NodePath("../../DragPanel/HelpButton")
focus_previous = NodePath("../Close")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="dragged_panel" from="DragPanel" to="." method="_on_drag_panel_dragged_panel"]
[connection signal="gui_input" from="DragPanel" to="DragPanel" method="_on_gui_input"]
[connection signal="pressed" from="Panel/GoBack" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="Panel/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Panel/control_camer_conf_btn" to="." method="_on_control_camer_conf_btn_pressed"]
